module login and home created

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,66 @@
-<p>login works!</p>
+<section class="vh-100 bg-image"
+  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Sign in</h2>
+
+              <form [formGroup]="formlogin" (ngSubmit)="onSubmit()">
+
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example3cg">Your Email</label>
+                  <input type="email" id="form3Example3cg" formControlName="email"
+                  class="form-control form-control-lg" [ngClass]="{ 'is-invalid': submitted && f['email'].errors}" />
+
+                  <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                    <div *ngIf="f['email'].errors?.['required']">Email is required</div>
+                    <div *ngIf="f['email'].errors?.['email']">Email must be a valid email address</div>
+                  </div>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example4cg">Password</label>
+                  <input type="password" id="form3Example4cg"  formControlName="password"
+                   class="form-control form-control-lg" [ngClass]="{ 'is-invalid': submitted && f['password'].errors}"/>
+
+                  <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+                    <div *ngIf="f['password'].errors?.['required']">Password is required</div>
+                    <div *ngIf="f['password'].errors?.['minlength']">Password must be at least 6 characters</div>
+                    <div *ngIf="f['password'].errors?.['maxlength']">Password must be a maximum 10 characters</div>
+                  </div>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                  <input type="password" id="form3Example4cdg"  formControlName="confirmpassword"
+                   class="form-control form-control-lg" [ngClass]="{ 'is-invalid': submitted && f['confirmpassword'].errors}"/>
+
+                  <div *ngIf="submitted && f['confirmpassword'].errors" class="invalid-feedback">
+                    <div *ngIf="f['confirmpassword'].errors?.['required']">Confirm Password is required</div>
+                    <div *ngIf="f['confirmpassword'].errors?.['mustMatch']">Passwords must match</div>
+                  </div>
+                </div>
+
+
+
+                <div class="d-grid gap-2 col mx-auto">
+                  <button
+                    class="btn btn-warning btn-block btn-lg ">Login</button>
+                </div>
+
+                <p class="text-center text-muted mt-5 mb-0">Don´t have an account? <a routerLink="/auth/register"
+                    class="fw-bold text-body"><u>Register here</u></a></p>
+
+              </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
