--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,52 @@
-<p>header works!</p>
+<header class=" bg-cyandark" style="height: 6rem;">
+  <div class="container h-100">
+    <div class="row align-items-center h-100">
+      <div class="col-8">
+        <h1 class="text-warning">Caribbean Style</h1>
+      </div>
+      <div class="col-auto">
+        <a routerLink="/auth" class="btn btn-warning" role="button" aria-disabled="true">Sign in</a>
+      </div>
+      <div class="col-auto">
+        <a class="btn btn-warning" role="button" aria-disabled="true">Shopping Cart</a>
+      </div>
+
+    </div>
+  </div>
+</header>
+<nav class=" navbar  navbar-dark  navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <!-- <a class="navbar-brand " href="#">Caribbean Style</a> -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text-textdark fs-4 fw-bold active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link text-textdark fs-4 fw-bold dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Categories
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item text-textdark  " href="#">Bolsos</a></li>
+            <li><a class="dropdown-item text-textdark " href="#">Morrales</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item text-textdark" href="#">Carteras</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-textdark fw-bold fs-4" href="#">Contact us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-textdark fw-bold fs-4" href="#">About</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
